<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="viewModel"
            type="com.danielvilha.fallenmeteors.ui.meteor.MeteorViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraint"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <fragment
            android:id="@+id/map"
            android:name="com.google.android.gms.maps.SupportMapFragment"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:context=".ui.meteor.MeteorFragment" />

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="65dp"
            android:layout_marginEnd="65dp"
            android:layout_marginBottom="70dp"
            app:cardBackgroundColor="@color/concrete"
            app:cardCornerRadius="16dp"
            app:cardElevation="16dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/constraint_view"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/white"
                android:padding="16dp"
                app:layout_constraintBottom_toBottomOf="@+id/constraint"
                app:layout_constraintEnd_toEndOf="@+id/constraint"
                app:layout_constraintStart_toStartOf="@+id/constraint">

                <TextView
                    android:id="@+id/name_text"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:includeFontPadding="false"
                    android:text="@{viewModel.selectedProperty.name}"
                    android:textAlignment="center"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    app:layout_constraintBottom_toTopOf="@+id/nametype_text"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/nametype_text"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:text="@string/text_name_type"
                    android:textStyle="bold"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/name_text" />

                <TextView
                    android:id="@+id/nametype_text_value"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="4dp"
                    android:text="@{viewModel.selectedProperty.nametype}"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/nametype_text"
                    app:layout_constraintTop_toTopOf="@+id/nametype_text" />

                <TextView
                    android:id="@+id/recclass_text"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/text_rec_class"
                    android:textStyle="bold"
                    app:layout_constraintStart_toStartOf="@+id/name_text"
                    app:layout_constraintTop_toBottomOf="@+id/nametype_text" />

                <TextView
                    android:id="@+id/recclass_text_value"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="4dp"
                    android:text="@{viewModel.selectedProperty.recclass}"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/recclass_text"
                    app:layout_constraintTop_toBottomOf="@+id/nametype_text" />

                <TextView
                    android:id="@+id/mass_text"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/text_mass"
                    android:textStyle="bold"
                    app:layout_constraintStart_toStartOf="@+id/name_text"
                    app:layout_constraintTop_toBottomOf="@+id/recclass_text" />

                <TextView
                    android:id="@+id/mass_text_value"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="4dp"
                    android:text="@{viewModel.selectedProperty.mass}"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/mass_text"
                    app:layout_constraintTop_toBottomOf="@+id/recclass_text" />

                <TextView
                    android:id="@+id/fall_text"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/text_fall"
                    android:textStyle="bold"
                    app:layout_constraintStart_toStartOf="@+id/name_text"
                    app:layout_constraintTop_toBottomOf="@+id/mass_text" />

                <TextView
                    android:id="@+id/fall_text_value"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="4dp"
                    android:text="@{viewModel.selectedProperty.fall}"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/fall_text"
                    app:layout_constraintTop_toBottomOf="@+id/mass_text" />

                <TextView
                    android:id="@+id/year_text"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/text_year"
                    android:textStyle="bold"
                    app:layout_constraintStart_toStartOf="@+id/name_text"
                    app:layout_constraintTop_toBottomOf="@+id/fall_text" />

                <TextView
                    android:id="@+id/year_text_value"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="4dp"
                    android:text="@{viewModel.selectedProperty.year.subSequence(0, 4)}"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/year_text"
                    app:layout_constraintTop_toBottomOf="@+id/fall_text" />
            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.cardview.widget.CardView>


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
